Small github auth fix

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,4 @@
 	url = git@github.com:Suyash-A/data_msc_project.git
 [submodule "models/VisualCheXbert"]
 	path = models/VisualCheXbert
-	url = https://github.com/Suyash-A/VisualCheXbert.git
+	url = git@github.com:Suyash-A/VisualCheXbert.git
